--- a/myweb/sisul.html
+++ b/myweb/sisul.html
@@ -81,7 +81,7 @@
     
         <script>
         
-        var api_key = "5a446c634f6a683933374876564176";
+        var api_key = config.api_key_seoul;
         var facilityData;
 
         $(document).ready(function(){
